# microtiff

./: README.md  pyproject.toml
scripts/: test.sh
src/: ifcb.py  lisst_holo.py
src/microtiff/: ifcb.py  lisst_holo.py
