[project]
name = "microtiff"
dynamic = ["version"]
authors = [
  { name="Alex Baldwin", email="contact@alexbaldwin.dev" },
]
license = { text="LGPL-3.0" }
description = "A Python module and CLI tool for converting proprietary microscopy formats to TIFF with JSON metadata sidecar files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NOC-OI/microtiff"
Issues = "https://github.com/NOC-OI/microtiff/issues"

[tool.setuptools.dynamic]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
